# autoinvesting

./: .env.example  .gitignore  .htaccess  Makefile  Pipfile  README.md  api-old.php  api.php  autoinvesting2.db  composer.json  create_mt_templates.py  cron.py  import_strategies.py  index-old.html  index.html  new_db_struct_migration.py  new_db_struct_migration2.py  package.json  pyproject.toml  requirements.txt  run.py  script_add_magic_to_trades.py  test_routes.html  trade_copier.py  update_from_mt.py
api/: authentication.php
back/: api.py  auth.py  controllers.py  db.py  main.py  strategies_csv.py  upload_file.py  utils.py
controllers/: authentication.php  backtest.php  file.php  strategy.php  trades.php
data/: 220514001_117_trades.csv  220514001_1_trades.csv  220514002_118_trades.csv  220514002_202_trades.csv  220514002_213_trades.csv  220514002_221_trades.csv  220514002_2_trades.csv  220514004_119_trades.csv  220514004_3_trades.csv  220514005_120_trades.csv  220514005_200_trades.csv  220514005_211_trades.csv  220514005_220_trades.csv  220514005_4_trades.csv  220604001_121_trades.csv  220604001_239_trades.csv  220604001_251_trades.csv  220604001_5_trades.csv  220610001_122_trades.csv  220610001_6_trades.csv  220610002_7_trades.csv  220610003_123_trades.csv  220610003_8_trades.csv  220610004_124_trades.csv  220610004_9_trades.csv  220612001_10_trades.csv  220612001_125_trades.csv  220612002_11_trades.csv  220612002_126_trades.csv  220612003_127_trades.csv  220612003_12_trades.csv  220612004_128_trades.csv  220612004_13_trades.csv  220612004_247_trades.csv  (+156 more)
(+229 files in other folders)
