[project]
name = "autoinvesting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=44.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "ib-insync>=0.9.86",
    "ipython>=9.1.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pyjwt>=2.10.1",
    "pywinauto>=0.6.9",
    "quantstats>=0.0.64",
    "schedule>=1.2.2",
    "sse-starlette>=2.3.3",
    "uvicorn>=0.34.2",
    "winwifi>=1.0.5",
]
